--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,15 +28,13 @@ jobs:
         run: |
           sed -i "s|\${PASSWORD_MACRO}|${{ secrets.PASSWORD_MACRO }}|g" config/keymap.keymap
 
-      - name: Upload prepared config
+      - name: Upload repo
         uses: actions/upload-artifact@v4
         with:
-          name: config
-          path: config
+          name: repo
+          path: .
 
   build:
     needs: prepare
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-    with:
-      config-path: config
     secrets: inherit
