--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Substitute PASSWORD_MACRO
         run: |
           sed -i "s|\${PASSWORD_MACRO}|${{ secrets.PASSWORD_MACRO }}|g" config/eyelash_sofle.keymap
+          cat config/eyelash_sofle.keymap
 
       - name: Upload repo
         uses: actions/upload-artifact@v4
