--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,20 +28,13 @@ jobs:
       #   run: |
       #     sed -i "s|\${PASSWORD_MACRO}|${{ secrets.PASSWORD_MACRO }}|g" config/eyelash_sofle.keymap
       #     cat config/eyelash_sofle.keymap
-      - name: Substitute PASSWORD_MACRO (python)
+
+      - name: Substitute PASSWORD_MACRO (perl)
         env:
           PASSWORD_MACRO: ${{ secrets.PASSWORD_MACRO }}
         run: |
-          python - <<'PY'
-import os
-p = os.environ['PASSWORD_MACRO']
-path = "config/eyelash_sofle.keymap"
-with open(path, "r", encoding="utf-8") as f:
-  s = f.read()
-s = s.replace("${PASSWORD_MACRO}", p)
-with open(path, "w", encoding="utf-8") as f:
-  f.write(s)
-PY
+          perl -0777 -pe 's/\$\{PASSWORD_MACRO\}/$ENV{PASSWORD_MACRO}/g' config/eyelash_sofle.keymap > config/eyelash_sofle.keymap.tmp
+          mv config/eyelash_sofle.keymap.tmp config/eyelash_sofle.keymap
 
       - name: Upload repo
         uses: actions/upload-artifact@v4
