--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Substitute PASSWORD_MACRO (perl)
         env:
           # PASSWORD_MACRO: ${{ secrets.PASSWORD_MACRO }}
-          PASSWORD_MACRO: "&kp LS(O) &kp G &kp I &kp R &kp N3 &kp N1 &kp N4 &kp N1 &kp N5 &kp MINUS"
+          PASSWORD_MACRO: &kp LS(O) &kp G &kp I &kp R &kp N3 &kp N1 &kp N4 &kp N1 &kp N5 &kp MINUS
         run: |
           perl -0777 -pe 's/\$\{PASSWORD\}/$ENV{PASSWORD_MACRO}/g' config/eyelash_sofle.keymap > config/eyelash_sofle.keymap.tmp
           mv config/eyelash_sofle.keymap.tmp config/eyelash_sofle.keymap
