--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,3 @@
-# name: Build ZMK firmware
-# on:
-#   workflow_dispatch:
-#   push:
-#     paths-ignore:
-#       - "keymap-drawer/**"
-
-# jobs:
-#   build:
-#     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-
-
 name: Build ZMK firmware
 on:
   workflow_dispatch:
@@ -18,33 +6,45 @@ on:
       - "keymap-drawer/**"
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout config
-        uses: actions/checkout@v4
-
-      # - name: Substitute PASSWORD_MACRO
-      #   run: |
-      #     sed -i "s|\${PASSWORD_MACRO}|${{ secrets.PASSWORD_MACRO }}|g" config/eyelash_sofle.keymap
-      #     cat config/eyelash_sofle.keymap
-
-      - name: Substitute PASSWORD_MACRO (perl)
-        env:
-          # PASSWORD_MACRO: ${{ secrets.PASSWORD_MACRO }}
-          PASSWORD_MACRO: '&kp LS(O) &kp G &kp I &kp R &kp N3 &kp N1 &kp N4 &kp N1 &kp N5 &kp MINUS'
-        run: |
-          perl -0777 -pe 's/\$\{PASSWORD\}/$ENV{PASSWORD_MACRO}/g' config/eyelash_sofle.keymap > config/eyelash_sofle.keymap.tmp
-          mv config/eyelash_sofle.keymap.tmp config/eyelash_sofle.keymap
-          cat config/eyelash_sofle.keymap
-
-      - name: Upload repo
-        uses: actions/upload-artifact@v4
-        with:
-          name: repo
-          path: .
-
   build:
-    needs: prepare
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-    secrets: inherit
+
+
+# name: Build ZMK firmware
+# on:
+#   workflow_dispatch:
+#   push:
+#     paths-ignore:
+#       - "keymap-drawer/**"
+
+# jobs:
+#   prepare:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout config
+#         uses: actions/checkout@v4
+
+#       # - name: Substitute PASSWORD_MACRO
+#       #   run: |
+#       #     sed -i "s|\${PASSWORD_MACRO}|${{ secrets.PASSWORD_MACRO }}|g" config/eyelash_sofle.keymap
+#       #     cat config/eyelash_sofle.keymap
+
+#       - name: Substitute PASSWORD_MACRO (perl)
+#         env:
+#           # PASSWORD_MACRO: ${{ secrets.PASSWORD_MACRO }}
+#           PASSWORD_MACRO: '&kp LS(O) &kp G &kp I &kp R &kp N3 &kp N1 &kp N4 &kp N1 &kp N5 &kp MINUS'
+#         run: |
+#           perl -0777 -pe 's/\$\{PASSWORD\}/$ENV{PASSWORD_MACRO}/g' config/eyelash_sofle.keymap > config/eyelash_sofle.keymap.tmp
+#           mv config/eyelash_sofle.keymap.tmp config/eyelash_sofle.keymap
+#           cat config/eyelash_sofle.keymap
+
+#       - name: Upload repo
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: repo
+#           path: .
+
+#   build:
+#     needs: prepare
+#     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+#     secrets: inherit
